tests/functional/lang/eval-fail-sort-4.err.exp
error:
       … while calling the 'sort' builtin
         at /pwd/lang/eval-fail-sort-4.nix:1:1:
            1| builtins.sort (_: _: 1) [
             | ^
            2|   "foo"

       … while evaluating the return value of the sorting function passed to builtins.sort

       error: expected a Boolean but found an integer: 1
